--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 		}
 	},
 	"require"     : {
-		"php"                          : ">=5.6",
+		"php" : ">=5.6",
+		"themehybrid/hybrid-core"      : "dev-master",
 		"themehybrid/hybrid-contracts" : "dev-master",
 		"themehybrid/hybrid-tools"     : "dev-master"
 	}
